Fix alignment of background image with [image]

--- a/playing-card.css
+++ b/playing-card.css
@@ -149,8 +149,6 @@
 	background-image: var(--image);
 	background-repeat: no-repeat;
 	background-size: 100%;
-	bottom: 0px;
-	top: 0px;
 	background-position: center
 	/* round off background image */
 	border-radius: var(--cornerRadius);
